chess/doc/logfile.txt
Project documentation
<---- javadoc command: ---->
/Applications/BlueJ.app/Contents/JDK/Home/bin/javadoc
-sourcepath
/Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess
-source
1.8
-classpath
/Applications/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/Applications/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/Applications/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess
-d
/Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc
-encoding
UTF-8
-charset
UTF-8
-doctitle
chess
-windowtitle
chess
-author
-version
-nodeprecated
-package
-Xdoclint:none
-link
http://download.oracle.com/javase/8/docs/api/
tests
/Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/Bishop.java
/Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/Queen.java
/Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/Square.java
/Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/Pawn.java
/Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/Game.java
/Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/Board.java
/Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/King.java
/Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/CheckInput.java
/Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/Piece.java
/Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/Knight.java
/Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/PieceColour.java
/Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/Rook.java
<---- end of javadoc command ---->
Loading source file /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/Bishop.java...
Loading source file /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/Queen.java...
Loading source file /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/Square.java...
Loading source file /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/Pawn.java...
Loading source file /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/Game.java...
Loading source file /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/Board.java...
Loading source file /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/King.java...
Loading source file /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/CheckInput.java...
Loading source file /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/Piece.java...
Loading source file /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/Knight.java...
Loading source file /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/PieceColour.java...
Loading source file /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/Rook.java...
Loading source files for package tests...
Constructing Javadoc information...
/Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/tests/DevPawnTest.java:9: error: cannot find symbol
	Board b; 
	^
  symbol:   class Board
  location: class DevPawnTest
/Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/tests/DevCheckInputTest.java:10: error: cannot find symbol
	CheckInput ci;
	^
  symbol:   class CheckInput
  location: class DevCheckInputTest
/Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/tests/DevBishopTest.java:9: error: cannot find symbol
	Board b; 
	^
  symbol:   class Board
  location: class DevBishopTest
/Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/tests/DevKingTest.java:9: error: cannot find symbol
	Board b; 
	^
  symbol:   class Board
  location: class DevKingTest
/Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/tests/DevKnightTest.java:9: error: cannot find symbol
	Board b; 
	^
  symbol:   class Board
  location: class DevKnightTest
/Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/tests/DevRookTest.java:10: error: cannot find symbol
	Board b; 
	^
  symbol:   class Board
  location: class DevRookTest
/Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/tests/DevQueenTest.java:8: error: cannot find symbol
	Board b; 
	^
  symbol:   class Board
  location: class DevQueenTest
Standard Doclet version 1.8.0_144
Building tree for all the packages and classes...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/Bishop.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/Board.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/CheckInput.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/Game.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/King.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/Knight.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/Pawn.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/Piece.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/PieceColour.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/Queen.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/Rook.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/Square.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/tests/DevBishopTest.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/tests/DevCheckInputTest.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/tests/DevKingTest.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/tests/DevKnightTest.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/tests/DevPawnTest.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/tests/DevQueenTest.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/tests/DevRookTest.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/overview-frame.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/package-frame.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/package-summary.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/package-tree.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/tests/package-frame.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/tests/package-summary.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/tests/package-tree.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/constant-values.html...
Building index for all the packages and classes...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/overview-tree.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/index-all.html...
Building index for all classes...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/allclasses-frame.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/allclasses-noframe.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/index.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/overview-summary.html...
Generating /Users/inderdeepbhatia/Desktop/GitRepos/comp16412-coursework-1_h81183gb/chess/doc/help-doc.html...
7 warnings
